# yukitavern

./: .eslintrc.json  .gitignore  .prettierrc  README.md  bun.lockb  config.json5  package-lock.json  package.json  server.js  start.bat  start.sh  statsHelpers.js  tsconfig.json
.github/: readme-zh_cn.md  readme.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-and-publish-release.yml  build-and-publish-staging.yml  build_setup_tool.yaml  update-docs.yml
default/: bg_load.css  config.conf  config.json  config.json5  settings.json
default/content/: Eldoria.json  index.json
docker/: docker-compose.yml
public/: i18n.json  index.html  script.js  style.css
public/css/: fontawesome.css  solid.css
public/instruct/: Alpaca.json  Koala.json  Vicuna 1.0.json  Vicuna 1.1.json  WizardLM.json
public/scripts/: .eslintrc.json  RossAscends-mods.js  authors-note.js  bookmarks.js  context-template.js  droll.js  eventemitter.js  extensions.js  f-localStorage.js  filters.js  fuse.js  fuse.min.js  group-chats.js  horde.js  kai-settings.js  nai-settings.js  openai.js  pagination.js  popper.js  popper.js.map  popper.min.js  power-user.js  preset-manager.js  secrets.js  showdown-exclusion.js  slash-commands.js  stats.js  swiped-events.js  tags.js  textgen-settings.js  toolcool-color-picker.js  toolcool-color-picker.min.js  utils.js  (+2 more)
setup/: Cargo.toml
setup/src/: main.rs
src/: character-card-parser.js  character-card-parser.ts  claude.json  claude.min.json  content-manager.js  content-manager.ts  novelai.js  server.ts  statsHelpers.ts
(+87 files in other folders)
