[package]
name    = "setup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow     = "1.0.75"
eframe     = "0.23.0"
egui       = "0.23.0"
regex      = "1.10.2"
rfd        = "0.12.1"
serde      = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
